--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/src/css/reset.css">
+    <link rel="stylesheet" href="/src/css/style.css">
     <title>CLONE YU-GI-HO</title>
 </head>
 <body>
     <header class="cabecalho">
-        <h1 class="titulo">CLONE YU-GI-HO</h1>
+        <h1 class="titulo">CLONE YU-GI-OH</h1>
     </header>
     <main class="slider">
         <button class="btn-seta btn-voltar" id="btn-voltar">
@@ -32,7 +34,7 @@
                 <img src="src/imgs/cosmos-sentinel.png" alt="Cosmos Sentinel, o Guardião Galatico" class="imagem-carta">
 
                 <div class="informacoes">
-                    <p class="descricao"></p>
+                    <p class="descricao">Este importante guerreiro cibernético é a personificação da harmonia entre tecnologia avançada e energia cósmica. Empunhado o Cetro Estelar, Cosmos Sentinel pode manipular o espaço-tempo, anulando ataque e fortalecendo aliados.</p>
                 </div>
                 <div class="informacoes-ataque">
                     <span>ATK/ 2800</span>
@@ -51,6 +53,7 @@
                     <span class="estrela"></span>
                     <span class="estrela"></span>
                     <span class="estrela"></span>
+                    
                 </div>
                 <img src="src/imgs/nebuladragon.png" alt="Nebuladragon, o Ser das Estrelas Eternas"
                     class="imagem-carta" />
@@ -106,6 +109,7 @@
                     <span class="estrela"></span>
                     <span class="estrela"></span>
                     <span class="estrela"></span>
+                    
                 </div>
                 <img src="src/imgs/mechadragon.png" alt="Mechadragon X, o Destruidor Biomecânico"
                     class="imagem-carta" />
