--- a/index.html
+++ b/index.html
@@ -216,5 +216,6 @@
             <img src="src/imgs/seta.png" alt="seta avançar">
         </button>
     </main>
+    <script src="/src/js/index.js"></script>
 </body>
 </html>
